# Quanttradepredictor

./: .env.example  .replit  .upstox_token  Home.py  MarketDataFeedV3_pb2.py  api_server.py  api_server_corrupted.py  app.py  auto_restore.py  clear_database.py  clear_session_cache.py  complete_all_models.py  complete_fallback_removal.py  complete_training.py  craco.config.js  debug_data_structure.py  debug_pipeline_status.py  debug_upstox_auth.py  export_database.py  export_predictions.py  export_to_sql.py  final_fallback_cleanup.py  final_syntax_cleanup.py  fix_all_datetime_issues.py  fix_datetime_display.py  fix_feature_names.py  fix_upstox_token.py  force_complete_training.py  force_seeding_test.py  force_start_predictions.py  get_upstox_token_guide.md  index.html  inspect_database.py  load_sample_data.py  main.py  migrate_to_row_based.py  model_validation.py  package-lock.json  package.json  pyproject.toml  (+30 more)
.streamlit/: config.toml
attached_assets/: Pasted--1-request-structure-guid-13syxu852ztodyqncwt0-method-sub-data--1755990278160_1755990278161.txt  Pasted--def-generate-trade-signal-self-instrument-key-str-weights-Opt-1759188565444_1759188565445.txt  Pasted--type-live-feed-feeds-NSE-FO-45450-fullFeed-market-1758739001899_1758739001899.txt  Pasted-1-Market-Data-Feed-V3-The-Market-Stream-Feed-V3-provides-real-time-market-updates-including-the-la-1755983039588_1755983039589.txt  Pasted-1-MarketDataFeedV3-proto-syntax-proto3-package-com-upstox-marketdatafeederv3udapi-rpc-pro-1755981929041_1755981929041.txt  (+43 more)
backend/: fastapi_main.py  fastapi_main_backup.py  main.py  (+2 more)
(+122 files in other folders)
