[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "replit>=4.1.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
]
