[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "replit>=4.1.2",
    "scikit-learn>=1.7.0",
    "streamlit>=1.45.1",
    "xgboost>=3.0.2",
    "catboost>=1.2.0",
    "lightgbm>=4.0.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.0",
    "ta>=0.11.0",
    "pandas-ta>=0.3.14b0",
    "finta>=1.3",
    "upstox-python-sdk>=2.17.0",
    "google-genai>=1.26.0",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "websockets>=15.0.1",
]
